set(SOURCES ../test_sets.cpp)
copy_bench_file("rungraphs.py")
copy_bench_file("run_optimization_experiments.py")
copy_bench_file("run_timestamp_experiments.py")
copy_bench_file("run_update_experiments.py")
copy_bench_file("run_zipf_experiments.py")
copy_bench_file("run_size_experiments.py")
copy_bench_file("run_scalability_experiments.py")


set(STRUCT_DIR ${PROJECT_SOURCE_DIR}/structures)
set(VERLIB_BENCH "btree" "list" "dlist" "hash_block" "arttree")
set(VERLIB_BENCH_EXTRA "leaftree" "blockleaftree")
set(VERLIB_BENCH_USE_CAS "hash_block")
set(VERLIB_BENCH_RECORDED_ONCE "btree" "list")

set(COMMON_DEFS "HashLock") #  "Latency")

function(add_benchmark NAME STRUCT_NAME DEFS)
  add_executable(${NAME} ${SOURCES})
  target_compile_definitions(${NAME} PRIVATE ${COMMON_DEFS})
  target_compile_definitions(${NAME} PRIVATE ${DEFS})
  target_link_libraries(${NAME} PRIVATE verlib)
  target_include_directories(${NAME} PRIVATE ${STRUCT_NAME})
endfunction()

foreach(bench ${VERLIB_BENCH_RECORDED_ONCE})
  add_benchmark(${bench}_lck_reconce_ls ${STRUCT_DIR}/${bench} "NoHelp;Versioned;Recorded_Once;LazyStamp")
  add_benchmark(${bench}_lf_reconce_ls ${STRUCT_DIR}/${bench} "Versioned;Recorded_Once;LazyStamp")
  add_benchmark(${bench}_lf_reconce_hs ${STRUCT_DIR}/${bench} "Versioned;Recorded_Once;HWWriteStamp")
  add_benchmark(${bench}_lf_reconce_ls_ss ${STRUCT_DIR}/${bench} "Versioned;Recorded_Once;LazyStamp;SlowStore")
endforeach()

foreach(bench ${VERLIB_BENCH})
  add_benchmark(${bench}_lck_noversion ${STRUCT_DIR}/${bench} "NoHelp")
  add_benchmark(${bench}_lck_versioned_ls ${STRUCT_DIR}/${bench} "NoHelp;Versioned;LazyStamp")
  add_benchmark(${bench}_lck_versioned_hs ${STRUCT_DIR}/${bench} "NoHelp;Versioned;HWWriteStamp")
  add_benchmark(${bench}_lf_noversion ${STRUCT_DIR}/${bench} "")
  add_benchmark(${bench}_lf_indirect_ls ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;LazyStamp")

  add_benchmark(${bench}_lck_indirect_rs ${STRUCT_DIR}/${bench} "NoHelp;Versioned;FullyIndirect;ReadStamp")

  add_benchmark(${bench}_lf_noshortcut_ls ${STRUCT_DIR}/${bench} "Versioned;NoShortcut;LazyStamp")
  add_benchmark(${bench}_lf_indirect_hs ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;HWWriteStamp")
  add_benchmark(${bench}_lf_noshortcut_hs ${STRUCT_DIR}/${bench} "Versioned;NoShortcut;HWWriteStamp")
  add_benchmark(${bench}_lf_versioned_hs ${STRUCT_DIR}/${bench} "Versioned;HWWriteStamp")
  add_benchmark(${bench}_lf_versioned_ls ${STRUCT_DIR}/${bench} "Versioned;LazyStamp")
  add_benchmark(${bench}_lf_versioned_tl2s ${STRUCT_DIR}/${bench} "Versioned;TL2Stamp;LazyStamp")
  add_benchmark(${bench}_lf_versioned_rs ${STRUCT_DIR}/${bench} "Versioned;ReadStamp")
  add_benchmark(${bench}_lf_versioned_ws ${STRUCT_DIR}/${bench} "Versioned;WriteStamp")
  add_benchmark(${bench}_lf_versioned_ns ${STRUCT_DIR}/${bench} "Versioned;NoIncStamp")
endforeach()

foreach(bench ${VERLIB_BENCH_USE_CAS})
  add_benchmark(${bench}_cas_noversion ${STRUCT_DIR}/${bench} "UseCAS;NoHelp")
  add_benchmark(${bench}_cas_indirect_ls ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;LazyStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_noshortcut_ls ${STRUCT_DIR}/${bench} "Versioned;NoShortcut;LazyStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_indirect_hs ${STRUCT_DIR}/${bench} "Versioned;FullyIndirect;HWWriteStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_noshortcut_hs ${STRUCT_DIR}/${bench} "Versioned;NoShortcut;HWWriteStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_versioned_hs ${STRUCT_DIR}/${bench} "Versioned;HWWriteStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_versioned_ls ${STRUCT_DIR}/${bench} "Versioned;LazyStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_versioned_tl2s ${STRUCT_DIR}/${bench} "Versioned;TL2Stamp;LazyStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_versioned_rs ${STRUCT_DIR}/${bench} "Versioned;ReadStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_versioned_ws ${STRUCT_DIR}/${bench} "Versioned;WriteStamp;UseCAS;NoHelp")
  add_benchmark(${bench}_cas_versioned_ns ${STRUCT_DIR}/${bench} "Versioned;NoIncStamp;UseCAS;NoHelp")
endforeach()

